--- a/app/src/main/res/color/main_radiobutton_font.xml
+++ b/app/src/main/res/color/main_radiobutton_font.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="#880f0f0f" />
-    <item android:color="#cc00ff00" android:state_checked="true" />
+    <item android:color="@android:color/holo_green_dark" android:state_checked="true" />
+    <item android:color="@android:color/darker_gray" />
+
 </selector>
